# prism

./: .gitignore  .gitmodules  CHANGELOG.md  COMPACT.md  Cargo.toml  Dockerfile  LICENSE  README.md  dev.sh  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.forgejo/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  docs.yml  e2e-full.yml  release.yml
contrib/linux/: install.sh  prism.service.template
contrib/macos/: Install Prism.command  rs.mux.prism.plist.template
docs/: CLI_GRAPH.md  DESIGN.md  GRAPH_BACKEND.md  README.md  codebase_analysis.md  index.md  prism-logs-schema.yaml
docs/admin/: configuration.md  deployment.md  monitoring.md  security.md  storage-backends.md
docs/cli/: prism-cli.md  prism-import.md  prism-server.md
docs/guides/: aggregations.md  api-reference.md  clustering.md  code-search.md  collections.md  encryption.md  export-import.md  getting-started.md  graph-search.md  highlighting.md  hybrid-search.md  more-like-this.md  ranking.md  search.md  suggestions.md  vector-search.md  web-ui.md
docs/plans/: 2026-01-27-s3-object-storage-backend.md  2026-01-28-aggregations-core.md  2026-01-29-federation-clustering-design.md  (+13 more)
docs/reference/: pipelines.md  (+2 more)
prism/: Cargo.toml
prism-cli/: Cargo.toml
prism-cli/src/: main.rs
prism-cli/src/commands/: attach.rs  benchmark.rs  cluster.rs  detach.rs  export.rs  graph_merge.rs  import.rs  inspect.rs  merge.rs  mod.rs  optimize.rs  restore.rs
prism-cluster/: Cargo.toml
prism-cluster/src/: client.rs  config.rs  error.rs  health.rs  lib.rs  metrics.rs  partition.rs  server.rs  service.rs  types.rs
prism-cluster/src/discovery/: dns.rs  mod.rs  static.rs
prism-cluster/src/federation/: merger.rs  mod.rs  router.rs
prism-cluster/src/placement/: algorithm.rs  mod.rs  state.rs
prism-cluster/src/rebalance/: engine.rs  mod.rs
prism-cluster/src/schema/: mod.rs  propagator.rs  registry.rs  version.rs
prism-cluster/src/transport/: mod.rs  quic.rs
prism-es-compat/: Cargo.toml
prism-es-compat/src/: error.rs  lib.rs  response.rs  router.rs
prism-es-compat/src/endpoints/: bulk.rs  cluster.rs  mapping.rs  mod.rs  msearch.rs  search.rs
prism-es-compat/src/query/: mod.rs  translator.rs  types.rs
prism-importer/: Cargo.toml
prism-importer/src/: error.rs  lib.rs  main.rs  progress.rs
prism-importer/src/schema/: mapping.rs  mod.rs  types.rs
prism-importer/src/sources/: elasticsearch.rs  mod.rs  traits.rs  wikipedia.rs
prism-server/: Cargo.toml
prism-server/src/: main.rs
prism-storage/: Cargo.toml
prism-storage/src/: cached.rs  compressed.rs  encrypted.rs  error.rs  lib.rs  local.rs  path.rs  s3.rs  tantivy_adapter.rs  traits.rs
prism-treesitter/: Cargo.toml
prism-treesitter/src/: detector.rs  lib.rs  splitter.rs  tokenizer.rs
prism-ui/: Cargo.toml  build.rs
prism-ui/src/: lib.rs
prism/dashboard/: package-lock.json  package.json  vite.config.ts
prism/dashboard/src/: App.tsx
prism/dashboard/src/api/: client.ts
prism/dashboard/src/components/: ErrorBoundary.tsx  PageHeader.tsx
prism/dashboard/src/hooks/: use-theme.ts
prism/dashboard/src/layouts/: DashboardLayout.tsx
prism/dashboard/src/pages/: AggregationsPage.tsx  CollectionsPage.tsx  IndexPage.tsx  SearchPage.tsx  StatsPage.tsx
prism/src/: CLAUDE.md  error.rs  lib.rs
prism/src/aggregations/: agg_trait.rs  builder.rs  mod.rs  types.rs
prism/src/aggregations/bucket/: mod.rs  terms.rs
prism/src/aggregations/metric/: avg.rs  count.rs  minmax.rs  mod.rs  sum.rs
prism/src/api/: mnemos_compat.rs  mod.rs  routes.rs  search_lucene.rs  server.rs
prism/src/backends/: graph.rs  hybrid.rs  mod.rs  text.rs  trait.rs  vector.rs
prism/src/backends/graph/: backend.rs  shard.rs
prism/src/backends/vector/: backend.rs  compaction.rs  index.rs  segment.rs  shard.rs
prism/src/cache/: embedding.rs  lru.rs  mod.rs  redis.rs  sqlite.rs  stats.rs  trait.rs
prism/src/collection/: detach.rs  manager.rs  mod.rs
prism/src/config/: mod.rs  storage.rs
prism/src/embedding/: CLAUDE.md  inference.rs  mod.rs  model.rs  ollama.rs  onnx.rs  openai.rs  provider.rs
prism/src/export/: encrypted.rs  mod.rs  portable.rs  snapshot.rs  types.rs
prism/src/ilm/: alias.rs  config.rs  mod.rs  rollover.rs  transition.rs  types.rs
prism/src/mcp/: handler.rs  mod.rs  session.rs  tools.rs
prism/src/migration/: discover.rs  export.rs  import.rs  mod.rs
prism/src/pipeline/: mod.rs  processors.rs  registry.rs
prism/src/query/: ast.rs  mod.rs  suggestions.rs
prism/src/query/aggregations/: date_histogram.rs  facets.rs  mod.rs  terms.rs
prism/src/query/engine/: adapter.rs  boosting.rs  field_extraction.rs  mod.rs  telemetry.rs
prism/src/query/parser/: lucene.rs  mod.rs  tokenizer.rs
prism/src/ranking/: cross_encoder.rs  decay.rs  mod.rs  reranker.rs  score_function.rs
prism/src/schema/: loader.rs  mod.rs  types.rs
prism/src/security/: audit.rs  middleware.rs  mod.rs  permissions.rs  types.rs
prism/src/storage/: config.rs  factory.rs  mod.rs  object_store_directory.rs  segment_adapter.rs  vector_store.rs
prism/src/templates/: matcher.rs  mod.rs  types.rs
prism/src/tokenizer/: mod.rs  splitter.rs
prism/test-data/schemas/: boosting-test.yaml  faceted-test.yaml
prism/tests/: advanced_ranking_test.rs  auto_embedding.rs  config_test.rs  e2e_api_test.rs  export_portable_test.rs  full_migration_test.rs  hnsw_adapter_test.rs  hybrid_search_test.rs  integration_test.rs  migration_import_test.rs  pipeline_integration_test.rs  pipeline_test.rs  production_schema_test.rs  proptest_roundtrip.rs  query_fuzz_test.rs  ranking_test.rs  real_embedding_test.rs  restart_persistence_test.rs  s3_integration.rs  security_integration_test.rs  security_test.rs  suggest_test.rs  text_backend_test.rs  text_concurrent_test.rs  vector_backend_test.rs  vector_sharding_test.rs
schemas/: nowiki.yaml
scripts/: update-checksums.sh
websearch-ui/: TODOs.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
xtask/: Cargo.toml
xtask/src/: main.rs
(+82 files in other folders)
