[workspace]
resolver = "2"
members = ["prism", "prism-server", "prism-cli", "prism-storage", "prism-importer", "prism-cluster", "prism-es-compat", "xtask"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["mikalv"]
repository = "https://github.com/mikalv/prism"
description = "Hybrid search engine combining full-text and vector search for AI/RAG applications"
keywords = ["search", "vector", "embedding", "rag", "tantivy"]
categories = ["database", "text-processing"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# HTTP (using rustls for cross-platform builds without OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2", "service"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.22"
parking_lot = "0.12"
dirs = "6"

# Search
tantivy = "0.22"
tantivy-common = "0.7"

# Query parsing
nom = "7.1"
time = { version = "0.3", features = ["formatting", "parsing"] }

# Vector backends
instant-distance = "0.6"
usearch = "2.13"

# Embedding generation
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
tokenizers = "0.19"
ndarray = "0.17"

# Cache backends
rusqlite = { version = "0.32", features = ["bundled"] }
redis = { version = "0.27", features = ["tokio-comp"] }

# Object storage
object_store = { version = "0.11", features = ["aws"] }
bytes = "1.5"

# Testing
tempfile = "3"

# RPC and cluster communication
tarpc = { version = "0.35", features = ["tokio1", "serde-transport"] }
quinn = "0.11"
bincode = "1.3"
rustls-native-certs = "0.8"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.9", features = ["bincode"] }

# Internal
prism = { path = "prism" }
prism-storage = { path = "prism-storage" }
prism-importer = { path = "prism-importer" }
prism-cluster = { path = "prism-cluster" }
prism-es-compat = { path = "prism-es-compat" }
