[package]
name = "prismsearch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Prism CLI tools for migration and administration"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
prism = { workspace = true }
prism-storage = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tantivy = { workspace = true }
tantivy-common = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
