[package]
name = "prism-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Prism search server binary"

[features]
default = []
provider-onnx = ["prism/provider-onnx"]
provider-onnx-real = ["prism/provider-onnx-real"]
all-providers = ["prism/all-providers"]

[dependencies]
prism = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
