[package]
name = "prism-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unified storage abstraction for Prism search engine"
keywords = ["storage", "s3", "search", "prism"]
categories = ["database", "filesystem"]

[dependencies]
# Async
async-trait.workspace = true
tokio = { workspace = true, features = ["fs"] }
futures.workspace = true

# Error handling
thiserror.workspace = true

# Serialization (for metadata)
serde = { workspace = true, features = ["derive"] }

# Logging
tracing.workspace = true

# Async utilities
async-recursion = "1"

# Object storage (optional)
object_store = { workspace = true, optional = true }
bytes.workspace = true

# Synchronization
parking_lot.workspace = true

# Tantivy integration (optional)
tantivy = { workspace = true, optional = true }

# Compression (optional)
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }

# Encryption (optional)
aes-gcm = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
s3 = ["object_store"]
tantivy-adapter = ["tantivy"]
compression-lz4 = ["lz4_flex"]
compression-zstd = ["zstd"]
compression = ["compression-lz4", "compression-zstd"]
encryption = ["aes-gcm", "hex", "base64"]
full = ["s3", "tantivy-adapter", "compression", "encryption"]
