[package]
name = "prismsearch-treesitter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tree-sitter based code tokenizer for AST-aware code search in Prism"

[lib]
name = "prism_treesitter"

[dependencies]
tree-sitter = "0.24"
tantivy = { workspace = true }

# Language grammars (all optional)
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-bash = { version = "0.23", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
tree-sitter-erlang = { version = "0.9", optional = true }
tree-sitter-sequel = { version = "0.3", optional = true }

[features]
default = [
    "rust", "python", "javascript", "typescript", "go",
    "c", "cpp", "ruby", "bash",
    "json", "html", "toml", "yaml",
    "elixir", "erlang", "sql",
]
rust = ["dep:tree-sitter-rust"]
python = ["dep:tree-sitter-python"]
javascript = ["dep:tree-sitter-javascript"]
typescript = ["dep:tree-sitter-typescript"]
go = ["dep:tree-sitter-go"]
c = ["dep:tree-sitter-c"]
cpp = ["dep:tree-sitter-cpp"]
ruby = ["dep:tree-sitter-ruby"]
bash = ["dep:tree-sitter-bash"]
json = ["dep:tree-sitter-json"]
html = ["dep:tree-sitter-html"]
toml = ["dep:tree-sitter-toml-ng"]
yaml = ["dep:tree-sitter-yaml"]
elixir = ["dep:tree-sitter-elixir"]
erlang = ["dep:tree-sitter-erlang"]
sql = ["dep:tree-sitter-sequel"]
