[package]
name = "prism-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedded web UI for Prism search engine"

[dependencies]
rust-embed = { version = "8", features = ["include-exclude"] }
axum = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
mime_guess = "2"
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }

[build-dependencies]
which = "7"
