[package]
name = "prism"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Search
tantivy = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP/API
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }

# Query parsing (formerly engraph-query)
nom = { workspace = true }
time = { workspace = true }

# Vector backends (optional)
instant-distance = { workspace = true, optional = true }
usearch = { workspace = true, optional = true }

# Embedding generation (optional)
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

# Cache backends
rusqlite = { workspace = true }
redis = { workspace = true, optional = true }

# Object storage
object_store = { workspace = true, optional = true }
bytes = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["vector-instant", "provider-ollama"]

# Vector index backends
vector-instant = ["dep:instant-distance"]
vector-usearch = ["dep:usearch"]

# Embedding providers
provider-ollama = []
provider-openai = []
provider-onnx = ["dep:ort", "dep:tokenizers", "dep:ndarray"]
all-providers = ["provider-ollama", "provider-openai", "provider-onnx"]

# Cache backends
cache-redis = ["dep:redis"]

# Storage backends
storage-s3 = ["dep:object_store"]

# Full feature set
full = ["vector-instant", "all-providers", "cache-redis"]
